--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
   <div id="main">
 <h2 id="question"></h2>
 <div id="answers"></div>
+<div id="response"></div>
   </div> 
+
 
   <script src="script.js"></script>
 </body>
