--- a/highscores.html
+++ b/highscores.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Hello, world!</title>
+  <title>Scores</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
   <link rel="stylesheet" type="text/css" href="style.css" />
@@ -10,7 +10,9 @@
   <meta name="theme-color" content="#0a19f0">
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <script src="app.js"></script>
+  <h1>High Scores</h1>
+  <h3>...coming soon!</h3>
+  <div id="scores"><ul></ul></div>
+  <script src="script.js"></script>
 </body>
 </html>
