--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <a href = "highscores.html" class = "highScoreLink" style="text-align: end;">
   See High Scores</a> 
 
-  <h6 class = "time" style = "text-align:end";></h6>
+  <h2 class = "time" style = "text-align:center";></h2>
 
   <h1>Coding Quiz Challenge</h1>
   <button id = "start">Start</button>
@@ -22,6 +22,8 @@
 <h2 id="question"></h2>
 <div id="answers"></div>
 <div id="response"></div>
+<div id="gameOver"></div>
+
   </div> 
 
 
